--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
     "builds": [
-      { "src": "build.sh", "use": "@vercel/static-build", "config": { "distDir": "public" } }
+      {
+        "src": "manage.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      {
+        "src": "/(.*)",
+        "dest": "/manage.py"
+      }
     ]
   }
   
